npm installations, serverless yml first touch

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -1,7 +1,11 @@
 # TODO: Change the name of the org 
-org: sudkul
+org: ozieblo
 app: serverless-todo-app
 service: serverless-todo-app
+frameworkVersion: '2.21.1'
+
+sls config credentials --provider aws --key ASIAWU5FAPYPXUR47XP4 --secret U3KDgDKcBF7BaB7535pi4piwCzz5yaQgGtfPprOK --profile serverless
+
 
 plugins:
   - serverless-webpack
@@ -11,7 +15,7 @@ plugins:
 provider:
   name: aws
   runtime: nodejs12.x
-  lambdaHashingVersion: '20201221'
+  #lambdaHashingVersion: '20201221'
 
   stage: ${opt:stage, 'dev'}
   region: ${opt:region, 'us-east-1'}
@@ -27,6 +31,8 @@ provider:
     TODOS_CREATED_AT_INDEX: CreatedAtIndex
     ATTACHMENT_S3_BUCKET: serverless-c4-todo-images-${self:provider.stage}
     SIGNED_URL_EXPIRATION: 300
+    PROJECT_NAME: serverless-todo-app
+    INDEX_NAME: ${self:provider.environment.TODOS_CREATED_AT_INDEX}
 
   logs:
     # Enable API Gateway logs
