validate HTTP requests

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -9,6 +9,7 @@ plugins:
   - serverless-iam-roles-per-function
   - serverless-plugin-tracing
   - serverless-reqvalidator-plugin
+  - serverless-aws-documentation
 
 provider:
   name: aws
@@ -42,6 +43,21 @@ provider:
         - xray:PutTraceSegments
       Resource:
         - "*"
+
+custom:
+  documentation:
+    api:
+      info:
+        version: v1.0.0
+        title: serverless-todo-app
+        description: serverless-todo-app
+    models:
+      - name: CreateTodoRequest
+        contentType: application/json
+        schema: ${file(models/create-todo-model.json)}
+      - name: UpdateTodoRequest
+        contentType: application/json
+        schema: ${file(models/update-todo-model.json)}
 
 functions:
 
@@ -82,9 +98,6 @@ functions:
           cors: true
           authorizer: Auth
           reqValidatorName: RequestBodyValidator
-          request:
-            schema:
-              application/json: ${file(models/create-todo-model.json)}
           documentation:
             summary: Create a new todo
             description: Create a new todo
